lib.path = "main.rs"

[package]
name = "shakejo"
description = """
shakejo
"""
version = "0.0.1"

license = "Apache-2.0"
edition = "2021"

[dependencies]
rand_core = { version = "0.6", default-features = false }
hkdf = { version = "0.12", default-features = false }

chacha20poly1305 = { version = "0.10", default-features = false }
blake2 = { version = "0.10", default-features = false }

x25519-dalek = { version = "2", features = [
    "static_secrets",
], default-features = false }

[dev-dependencies]
snow = "0.9"
